--- a/views/post.mustache
+++ b/views/post.mustache
@@ -93,7 +93,7 @@
   			<div class="clearfix"></div>
         <hr />
   			<h3 class="headline margin-top-25 margin-bottom-10">Launch Your Website</h3>
-        <p>Explore some of the best tips from around the world from our partners and friends. Discover some of the most popular templates in Sydney.</p>
+        <p>Create fully-featured professional websites in minutes. Select a template below to get started.</p>
   			<div id="featured-templates" class="row"></div>
   			<div class="margin-top-50"></div>
   	</div>
