--- a/views/template.mustache
+++ b/views/template.mustache
@@ -196,7 +196,7 @@
 	</div>
 </div>
 
-{{>footer}}
+{{>footer-dark}}
 <a style="display:none" id="btn-show-modal" href="#sign-in-dialog" class="popup-with-zoom-anim">test</a>
 </div>
 <!-- Wrapper / End -->
