email newsletter subscribe form

--- a/views/post.mustache
+++ b/views/post.mustache
@@ -223,7 +223,7 @@
       }
 
       $.ajax({
-        url: '/account/newsletter',
+        url: '/account/mailchimp',
         type: 'POST',
         data: subscriber,
         success: function(response){
