--- a/views/partials/newsletter.mustache
+++ b/views/partials/newsletter.mustache
@@ -19,7 +19,7 @@
       </form>
     </div>
 
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-6 col-md-6 hidden-xs">
       <div style="text-align:right">
         <img src="https://lh3.googleusercontent.com/l3BFy86lCQ5OL-yWD-7MHa_7fCH6T5W2q0LeDy0vRPCSZZK8NwjBRteoX4aNV_RRRwMFwUo3N7avntE5YEMFAo4Y=s260-c" />
       </div>
