use dark footer

--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -91,7 +91,7 @@
 
 </div>
 
-{{>footer}}
+{{>footer-dark}}
 </div>
 
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
