mobile ui for home page

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -41,8 +41,7 @@
 
 <div class="clearfix"></div>
 
-<div class="fs-container">
-
+<div class="fs-container hidden-xs"> <!-- Desktop View -->
 	<div class="fs-inner-container content">
 		<div class="fs-content">
 
@@ -94,6 +93,107 @@
     <div id="selected-template" class="blog-post" style="margin-top:0px"></div>
     <a style="display:none" id="btn-show-modal" href="#sign-in-dialog" class="popup-with-zoom-anim">test</a>
 	</div>
+</div>
+
+<div class="fs-container hidden-md hidden-lg"> <!-- Mobile View -->
+  <img src="https://lh3.googleusercontent.com/ZrN5Nhga-8cd9ju47rv8l6lYlrF4Hu12R-rov72-0qIT1k1fGCl4Bn0KZRMt0An1PbkUiSHefxR_4oqvqL4nqOZB1Q=s1024" alt="Vertex 360">
+  <div class="post-content">
+    <h3><a href="#">Lightning Fast Web Design</a></h3>
+    <ul class="post-meta">
+      <li>No Coding Required</li>
+      <li>FREE to start</li>
+    </ul>
+
+    <p class="margin-top-0 margin-bottom-40">
+      Get up and running with a gorgeous new website in under an hour.
+    </p>
+
+    <hr class="margin-bottom-40" />
+
+    <img style="width:80%;border:1px solid #ededed" src="https://lh3.googleusercontent.com/f25J1JMUTLjI-9GZvqTzyJEZmMbJYjiCIIq04V5cFoD7bnKcMi44fOVrZ50-vin0R25Iw21zPh6D_T8NeQtIxOAF=s1024" />
+    <h3 class="margin-top-40">Web Design Made Easy</h3>
+    <p class="margin-top-0 margin-bottom-40">
+      Simply input your content and walk away - no coding required! No more tinkering with
+      confusing editors, drag &amp; drop tools, or ridiculously complicated features for
+      <em>"beginners"</em>. On Vertex 360, simply input your text and images and move on
+      with your life, business, more important stuff.
+    </p>
+
+    <hr class="margin-bottom-40" />
+
+    <img style="width:80%" src="https://lh3.googleusercontent.com/IRk0higW6nSjtBG_8lzhNpU7Pi6yzguo1J7Thkwlj4biYpqB63uZ-IAfeQN9nJS1QiokjVnYrgVBYvkcdpDFKGk-rmU=s1024" />
+    <h3 class="margin-top-40">Powerful Features</h3>
+    <p class="margin-top-0 margin-bottom-40">
+      Easily interact with your customers with email subscriber lists, image hosting and blog support.
+      <ul class="listing-features checkboxes margin-top-0 margin-bottom-20">
+        <li>CMS (blog, users, etc)</li>
+        <li><em><b>Automatic SSL</b></em></li>
+        <li>Accept Credit Cards</li>
+        <li>Subscriber Forms</li>
+        <li>Download Source Code</li>
+        <li><em><b>Custom Domains</b></em></li>
+        <li><em><b>Site Analytics</b></em></li>
+        <li>Collaboration Option</li>
+        <li>Email Support</li>
+      </ul>
+      <em><b>Premium Feature</b></em>
+    </p>
+
+    <hr class="margin-bottom-40" />
+
+    <img class="margin-left-20 margin-bottom-20" style="width:44%;float:right;" src="https://lh3.googleusercontent.com/brSHk-ZDAbE4ktT20RjeEAF_N6PsrtIdFvN98PzbHsFwpWsmEoXcoq0liYvY1_YbzT6WaE5eUIINd8euMESFFQu4=s512" />
+    <h3 class="margin-top-40">Free to Start</h3>
+    <p class="margin-top-0 margin-bottom-40">
+      Vertex websites are free to start and come with a robust set of features
+      out of the box. Once you are ready to connect your site to a custom domain,
+      our afforable plans begin at only $5 per month.
+      <table class="table table-striped" style="border:1px solid #ededed;background:#fffffa">
+        <thead>
+          <tr>
+            <td style="padding:12px">&nbsp;</td>
+            <td style="padding:12px"><b>Basic</b><br /><small>Free</small></td>
+            <td style="padding:12px"><b>Premium</b><br /><small>$5/month</small></td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Unlimited Test Sites</td>
+            <td><i class="verified-icon margin-left-10"></i></td>
+            <td><i class="verified-icon margin-left-10"></i></td>
+          </tr>
+          <tr>
+            <td>CMS (for blog, subscribers, etc)</td>
+            <td><i class="verified-icon margin-left-10"></i></td>
+            <td><i class="verified-icon margin-left-10"></i></td>
+          </tr>
+          <tr>
+            <td>Downloadable Code</td>
+            <td><i class="verified-icon margin-left-10"></i></td>
+            <td><i class="verified-icon margin-left-10"></i></td>
+          </tr>
+          <tr>
+            <td>Custom Domain</td>
+            <td><span class="qtyTotal ex-icon margin-left-10">x</span></td>
+            <td><i class="verified-icon margin-left-10"></i></td>
+          </tr>
+          <tr>
+            <td>Automatic SSL</td>
+            <td><span class="qtyTotal ex-icon margin-left-10">x</span></td>
+            <td><i class="verified-icon margin-left-10"></i></td>
+          </tr>
+        </tbody>
+      </table>
+    </p>
+
+    <img class="margin-top-40" style="border:1px solid #ededed" src="https://lh3.googleusercontent.com/3oGNMjlI_ZszITyp6HJ43MNMcNamsh8M0FPMAAhDUDVawawxllUkBUNBPLAQggvRuXrR0u7RJDuxb4C2BJynQE8M=s320" />
+    <h3 class="margin-top-20">Join our Slack Channel!</h3>
+    <p class="margin-top-0 margin-bottom-40">
+      Join our Slack channel to ask questions, stay up to date with new features, templates,
+      and learn more about Vetex 360!. To join, click <a style="color:red" target="_blank" href="https://join.slack.com/t/vertex360/shared_invite/enQtNTg4ODY2MzY3MTIyLTdlNzNjY2RmOGIyYjIxYzZkNmQ5ZDVhNWNhNWU0ZjJiY2U1Mjg2OWU4NjMzY2YwOGVlZjU2YjQ1MjMzNWI3NGM">HERE</a>.
+    </p>
+
+    <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
+  </div>
 </div>
 
 
