vertex promo on blog page

--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <head>
   {{>head}}
+
+  <style>
+      #btn-join {
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 6px;
+      }
+  </style>
 </head>
 
 <body>
@@ -52,10 +62,10 @@
 <div class="container">
 
 	<div class="row">
-		<div class="col-md-8 col-md-offset-2">
+		<div class="col-md-6 col-md-offset-3">
 			<h2 class="headline centered margin-top-80">
-				Plan The Vacation of Your Dreams
-				<span class="margin-top-25">Explore some of the best tips from around the world from our partners and friends.  Discover some of the most popular listings in Sydney.</span>
+				Lightning Fast Web Design
+				<span class="margin-top-25">Get up and running with a professional new website in under an hour.</span>
 			</h2>
 		</div>
 	</div>
@@ -64,30 +74,38 @@
 		<!-- Stage -->
 		<div class="col-md-4">
 			<div class="icon-box-2 with-line">
-				<i class="im im-icon-Map2"></i>
-				<h3>Find Interesting Place</h3>
-				<p>Proin dapibus nisl ornare diam varius tempus. Aenean a quam luctus, finibus tellus ut, convallis eros sollicitudin turpis.</p>
+				<i class="im im-icon-Retouching"></i>
+				<h3>Web Design Made Easy</h3>
+				<p>No coding required! No tinkering with confusing editors, drag &amp; drop tools, or complicated features for "beginners".</p>
 			</div>
 		</div>
 
 		<!-- Stage -->
 		<div class="col-md-4">
 			<div class="icon-box-2 with-line">
-				<i class="im im-icon-Mail-withAtSign"></i>
-				<h3>Contact a Few Owners</h3>
-				<p>Maecenas pulvinar, risus in facilisis dignissim, quam nisi hendrerit nulla, id vestibulum metus nullam viverra porta purus.</p>
+				<i class="im im-icon-Gears"></i>
+				<h3>Powerful Features</h3>
+				<p>Easily interact with your customers with email subscriber lists, image hosting and blog support.</p>
 			</div>
 		</div>
 
 		<!-- Stage -->
 		<div class="col-md-4">
 			<div class="icon-box-2">
-				<i class="im im-icon-Checked-User"></i>
-				<h3>Make a Reservation</h3>
-				<p>Faucibus ante, in porttitor tellus blandit et. Phasellus tincidunt metus lectus sollicitudin feugiat pharetra consectetur.</p>
+				<i class="im im-icon-Coin"></i>
+				<h3>Free To Start</h3>
+				<p>Vertex websites are free to start. Once you are ready to connect your site to a custom domain, our plans begin at only $5.</p>
 			</div>
 		</div>
 	</div>
+
+
+  <div class="row">
+		<div class="col-md-6 col-md-offset-3">
+      <a id="btn-join" href="/templates" class="button with-icon margin-top-40">Get Started</a>
+		</div>
+	</div>
+
 
 </div>
 
