link to blog in account nav

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -43,6 +43,7 @@
     						<li><a class="current" href="/">Home</a></li>
     						<li><a id="nav-how-it-works" href="/?selected=how+it+works">How It Works</a></li>
                 <li><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
+                <li><a href="/blog">Blog</a></li>
   							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
     					</ul>
     				</nav>
