summer bg color

--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -16,6 +16,10 @@
       background: #f9f9f9 !important;
       padding: 4px;
     }
+
+    .note-editable {
+      background: #f9f9f9;
+    }
   </style>
 </head>
 
