--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -17,8 +17,12 @@
       padding: 4px;
     }
 
+    .note-toolbar {
+      background: #f9f9f9 !important;
+    }
+
     .note-editable {
-      background: #f9f9f9;
+      background: #f9f9f9 !important;
     }
   </style>
 </head>
