--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -41,11 +41,8 @@
                       <a href="/post/{{slug}}">{{title}}</a>
                     </h3>
                     <span class="date">{{dateString}}</span></div>
+                    <a style="float:right;margin-left:12px" href="/post/{{slug}}"><img src="{{{image}}}=s140-c" alt="Vertex 360"></a>
                     <p><a href="/post/{{slug}}">{{preview}}</a></p>
-
-                  <div>
-                    <a href="/post/{{slug}}"><img src="{{{image}}}=s260" alt="Vertex 360"></a>
-                  </div>
                 </div>
   						</li>
               {{/posts}}
