smaller title tex

--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -26,9 +26,8 @@
 			<div class="col-md-8 col-md-offset-2">
 				<h3 class="headline centered margin-bottom-45">
 					Blog
-					<span>Discover top-rated local businesses</span>
 				</h3>
-
+        <hr />
         <div id="listing-reviews" class="listing-section">
   				<section class="comments listing-reviews">
   					<ul>
@@ -41,9 +40,9 @@
                 </div>
                 <div class="comment-content"><div class="arrow-comment"></div>
                   <div class="comment-by">
-                    <h3 class="margin-top-0">
+                    <h4 class="margin-top-0 margin-bottom-10">
                       <a href="/post/{{slug}}">{{title}}</a>
-                    </h3>
+                    </h4>
                     <span class="date">{{dateString}}</span></div>
                     <a style="float:right;margin-left:12px" href="/post/{{slug}}"><img src="{{{image}}}=s140-c" alt="Vertex 360"></a>
                     <p><a href="/post/{{slug}}">{{preview}}</a></p>
