--- a/views/partials/footer-dark.mustache
+++ b/views/partials/footer-dark.mustache
@@ -13,25 +13,18 @@
 					<li><a href="/templates">Templates</a></li>
 					<li><a href="/?selected=how+it+works">How It Works</a></li>
 					<li><a href="/blog">Blog</a></li>
-					<li><a href="#">Terms of Use</a></li>
 				</ul>
 				<div class="clearfix"></div>
 			</div>
 
 			<div class="col-md-3 col-sm-12">
-				<div class="text-widget">
-					<span>12345 Little Lonsdale St, Melbourne</span> <br>
-					Phone: <span>(123) 123-456 </span><br>
-					E-Mail:<span> <a href="#">office@example.com</a> </span><br>
-				</div>
-
-        <!--
-				<ul class="social-icons margin-top-20">
-					<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-					<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-					<li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-					<li><a class="vimeo" href="#"><i class="icon-vimeo"></i></a></li>
-				</ul> -->
+				<ul class="footer-links">
+					<li><a href="/?selected=faq">Developers</a></li>
+					<li><a href="/templates">Documentation</a></li>
+					<li><a href="#">Terms of Use</a></li>
+					<li><a href="#">Privacy Policy</a></li>
+				</ul>
+				<div class="clearfix"></div>
 			</div>
 		</div>
 
