--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -45,7 +45,7 @@
                   </div>
                   <div class="comment-content"><div class="arrow-comment"></div>
                     <div class="comment-by">
-                      <h4 class="margin-top-0 margin-bottom-10">
+                      <h4 style="color:#37b6bd" class="margin-top-0 margin-bottom-10">
                         <a href="/post/{{slug}}">{{title}}</a>
                       </h4>
                       <span class="date">{{dateString}}</span></div>
