green text color

--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -45,8 +45,8 @@
                   </div>
                   <div class="comment-content"><div class="arrow-comment"></div>
                     <div class="comment-by">
-                      <h4 style="color:#37b6bd" class="margin-top-0 margin-bottom-10">
-                        <a href="/post/{{slug}}">{{title}}</a>
+                      <h4 class="margin-top-0 margin-bottom-10">
+                        <a style="color:#37b6bd" href="/post/{{slug}}">{{title}}</a>
                       </h4>
                       <span class="date">{{dateString}}</span></div>
                       <a style="float:right;margin-left:12px" href="/post/{{slug}}"><img src="{{{image}}}=s140-c" alt="Vertex 360"></a>
