--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -50,7 +50,7 @@
                       </h4>
                       <span class="date">{{dateString}}</span></div>
                       <a style="float:right;margin-left:12px" href="/post/{{slug}}"><img src="{{{image}}}=s140-c" alt="Vertex 360"></a>
-                      <p><a href="/post/{{slug}}">{{preview}}</a></p>
+                      <p style="min-height:115px"><a href="/post/{{slug}}">{{preview}}</a></p>
                   </div>
     						</li>
                 {{/posts}}
