footer for mobile ui

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -194,6 +194,7 @@
 
     <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
   </div>
+  {{>footer-dark}}
 </div>
 
 
