--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -24,6 +24,10 @@
     .note-editable {
       background: #f9f9f9 !important;
     }
+
+    .modal-dialog {
+      margin-top: 120px !important;
+    }
   </style>
 </head>
 
