--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -28,6 +28,14 @@
     .modal-dialog {
       margin-top: 120px !important;
     }
+
+    .modal-title {
+      border-bottom: none !important;
+    }
+
+    .modal-body {
+      background: #f9f9f9 !important;
+    }
   </style>
 </head>
 
