--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -36,6 +36,10 @@
     .modal-body {
       background: #f9f9f9 !important;
     }
+
+    .checkbox input {
+      height: 20px !important;
+    }
   </style>
 </head>
 
