--- a/views/account.mustache
+++ b/views/account.mustache
@@ -33,6 +33,10 @@
       line-height: 14px; max-width: 100%; height: 36px; border: none; background: rgb(249, 249, 249); padding: 3px 3px 3px 8px;
     }
 
+    .input-container textarea {
+      line-height: 14px; max-width: 100%; border: none; background: rgb(249, 249, 249); padding: 3px 3px 3px 8px;
+    }
+
   </style>
 </head>
 
@@ -107,14 +111,15 @@
 					<h4 class="gray">Profile Details</h4>
 					<div class="dashboard-list-box-static">
             <div class="row">
-              <div class="col-lg-4">
-                <div class="edit-profile-photo">
-                  <img id="profile-image" src="{{user.image}}=s512-c" alt="Vertex 360" />
-                  <span>Click to Change</span>
-                </div>
-              </div>
-
               <div class="col-lg-12">
+                <div class="input-row">
+                  <div class="input-label">Image</div>
+                  <div class="input-container">
+                    <img style="max-width:160px;margin-bottom:16px" id="profile-image" src="{{user.image}}=s512-c" alt="Vertex 360" />
+                    <span>Click to Change</span>
+                  </div>
+                </div>
+
                 <div class="input-row">
                   <div class="input-label">First Name</div>
                   <div class="input-container">
@@ -146,7 +151,7 @@
                 <div class="input-row">
                   <div class="input-label">Bio</div>
                   <div class="input-container">
-                    <input id="input-profile-bio" type="text" value="{{user.bio}}" />
+                    <textarea id="input-profile-bio" rows="10">{{user.bio}}</textarea>
                   </div>
                 </div>
 
