--- a/views/account.mustache
+++ b/views/account.mustache
@@ -30,11 +30,20 @@
     }
 
     .input-container input {
-      line-height: 14px; max-width: 100%; height: 36px; border: none; background: rgb(249, 249, 249); padding: 3px 3px 3px 8px;
+      line-height: 14px;
+      max-width: 100%;
+      height: 36px;
+      border: none;
+      background: rgb(249, 249, 249);
+      padding: 3px 3px 3px 8px;
     }
 
     .input-container textarea {
-      line-height: 14px; max-width: 100%; border: none; background: rgb(249, 249, 249); padding: 3px 3px 3px 8px;
+      line-height: 14px;
+      max-width: 100%;
+      border: none;
+      background: rgb(249, 249, 249);
+      padding: 3px 3px 3px 8px;
     }
 
   </style>
