--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -82,3 +82,40 @@
     padding-bottom: 20px;
   }
 }
+
+
+.input-row {
+  margin-left: 10px;
+  margin-bottom: 3px;
+  display: flex;
+}
+
+.input-label {
+  font-size: 14px;
+  margin-left: 0px;
+  flex: 1 1 0%;
+  color: rgb(204, 0, 0);
+  margin-top: 4px;
+}
+
+.input-container {
+  flex: 5 1 0%;
+  margin-left: 10px;
+}
+
+.input-container input {
+  line-height: 14px;
+  max-width: 100%;
+  height: 36px;
+  border: none;
+  background: rgb(249, 249, 249);
+  padding: 3px 3px 3px 8px;
+}
+
+.input-container textarea {
+  line-height: 24px;
+  max-width: 100%;
+  border: none;
+  background: rgb(249, 249, 249);
+  padding: 3px 3px 3px 8px;
+}
