--- a/views/post.mustache
+++ b/views/post.mustache
@@ -128,11 +128,11 @@
         </a>
       </div>
 
-      <div class="widget-text">
-        <h5 class="preview-title">
+      <div class="widget-text" style="padding-top:6px">
+        <h5 class="preview-title" style="line-height:12px;margin-bottom:0px">
           <a href="/post/<% slug %>"><% title %></a>
         </h5>
-        <span><% dateString %></span>
+        <small><% dateString %></small>
       </div>
       <div class="clearfix"></div>
     </div>
