--- a/views/account.mustache
+++ b/views/account.mustache
@@ -95,7 +95,7 @@
                 <div class="input-row">
                   <div class="input-label">First Name</div>
                   <div class="input-container">
-                    <input id="input-profile-firstName" type="text" value="{{user.firstName}}" style="line-height: 14px; max-width: 100%; height: 36px; border: none; background: rgb(249, 249, 249); padding: 3px 3px 3px 8px;">
+                    <input id="input-profile-firstName" type="text" value="{{user.firstName}}" />
                   </div>
                 </div>
 
