--- a/views/partials/newsletter.mustache
+++ b/views/partials/newsletter.mustache
@@ -1,27 +1,41 @@
 <div id="add-review" class="add-review-box" style="background:#fff">
   <h3 class="listing-desc-headline margin-bottom-20">Newsletter</h3>
   <hr />
-  <p class="margin-top-20">Subscribe to our newsletter to make sure you don’t miss anything.</p>
+  <p class="margin-top-20">
+    Subscribe to our newsletter to make sure you don’t miss anything. Get
+    notified when new blog posts are published and when we release new
+    design templates.
+  </p>
 
   <div class="row">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-8 col-md-8">
 
       <form id="add-comment" class="add-comment">
-        <fieldset>
-          <label>Name:</label>
-          <input id="input-newsletter-name" type="text" style="background:#fffffa" />
-          <label>Email:</label>
-          <input id="input-newsletter-email" type="text" style="background:#fffffa" />
-        </fieldset>
+        <div class="input-row">
+          <div class="input-label">Name</div>
+          <div class="input-container">
+            <input id="input-newsletter-name" type="text" />
+          </div>
+        </div>
 
-        <button id="btn-newsletter-subscribe" class="button">Sign Up!</button>
+        <div class="input-row">
+          <div class="input-label">Email</div>
+          <div class="input-container">
+            <input id="input-newsletter-email" type="text" />
+          </div>
+        </div>
+
+        <div style="text-align:right">
+          <hr />
+          <button id="btn-newsletter-subscribe" class="button">Sign Up!</button>
+        </div>
         <div class="clearfix"></div>
       </form>
     </div>
 
-    <div class="col-lg-6 col-md-6 hidden-xs">
+    <div class="col-lg-4 col-md-4 hidden-xs">
       <div style="text-align:right">
-        <img src="https://lh3.googleusercontent.com/l3BFy86lCQ5OL-yWD-7MHa_7fCH6T5W2q0LeDy0vRPCSZZK8NwjBRteoX4aNV_RRRwMFwUo3N7avntE5YEMFAo4Y=s260-c" />
+        <img src="https://lh3.googleusercontent.com/l3BFy86lCQ5OL-yWD-7MHa_7fCH6T5W2q0LeDy0vRPCSZZK8NwjBRteoX4aNV_RRRwMFwUo3N7avntE5YEMFAo4Y=s200-c" />
       </div>
     </div>
 
