--- a/views/template.mustache
+++ b/views/template.mustache
@@ -19,187 +19,116 @@
       border-radius: 50%;
       margin-left: 4px;
     }
+
+    .btn-edit {
+      text-transform: uppercase;
+      font-size: 9.7px;
+      letter-spacing: 2.5px;
+      font-weight: 60;
+      background: #f91942;
+      border-radius: 24px;
+      padding: 8px 12px;
+      line-height: 20px;
+      color: #fff !important;
+      font-weight: 400;
+      margin-bottom: 9px;
+    }
+
+    .preview-title {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 180px;
+    }
+
+    @media (min-width: 768px) {
+      .post-container {
+        padding-top: 120px
+      }
+
+      .lg-pt-40 {
+        padding-top: 40px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .post-content {
+        padding: 16px !important;
+      }
+    }
   </style>
 </head>
 
 <body>
+  <div id="wrapper" style="background:#f9f9f9">
+    {{>nav}}
+    <div class="clearfix"></div>
+    <div class="container lg-pt-40">
+      <div class="row post-container">
+    		<div class="col-lg-9 col-md-8 padding-right-30">
+    			<div class="blog-post single-post">
 
-<!-- Wrapper -->
-<div id="wrapper">
-  {{>nav}}
-  <div class="clearfix"></div>
+    				<div class="post-content">
+              <h1 style="font-size:32px">{{template.name}}</h1>
+              <ul class="post-meta">
+    						<li style="text-transform:capitalize">{{template.template.category}}</li>
+    						<li><a style="color:#37b6bd" href="/profile/{{template.profile.slug}}">{{template.profile.username}}</a></li>
+                {{#isAuthor}}
+                <li><a href="/submitpost?id={{template.id}}" class="btn-edit">Edit Post</a></li>
+                {{/isAuthor}}
+    					</ul>
+              <hr class="margin-top-20 margin-bottom-30" />
+              <img style="max-width:50%" class="post-img" src="{{{template.image}}}=s1024" alt="Vertex 360 | {{template.name}}">
+    					{{{template.description}}}
+    				</div>
 
-  <div class="single-listing-page-titlebar"></div>
+            <!-- About Author -->
+      			<div class="about-author" style="margin:0px;border-top:1px solid #ededed;background:#fffffa">
+              <a href="/profile/{{template.author.slug}}">
+        				<img src="{{{template.author.image}}}=s260-c" alt="Vertex 360 | {{template.author.firstName}} {{template.author.lastName}}" />
+              </a>
+      				<div class="about-description" style="min-height:120px">
+                <a href="/profile/{{template.author.slug}}">
+      					  <h4 class="margin-bottom-0 capitalize">{{template.author.firstName}} {{template.author.lastName}}</h4>
+                </a>
+      					<a href="/profile/{{template.author.slug}}">{{template.author.username}}</a>
+      					<p>{{{template.author.bio}}}</p>
+      				</div>
+      			</div>
 
-<div class="container">
-  <div class="row sticky-wrapper">
-    <div class="col-lg-8 col-md-8 padding-right-30 padding-top-120">
-      <h2>{{template.name}}</h2>
-      <button id="btn-launch-template" style="float:right" class="button with-icon">Launch This Template</button>
-      <span>
-        <a href="/profile/{{template.profile.slug}}" class="listing-address">{{template.profile.username}}</a>
-      </span>
-      <div class="star-rating" data-rating="5">
-        <div class="rating-counter"><a href="#listing-reviews">(31 reviews)</a></div>
-      </div>
+    			</div>
+
+          {{>newsletter}}
+
+    			<!-- Related Posts -->
+    			<div class="clearfix"></div>
+          <hr />
+    			<h3 class="headline margin-top-25 margin-bottom-10">Launch Your Website</h3>
+          <p>Create fully-featured professional websites in minutes. Select a template below to get started.</p>
+    			<div id="featured-templates" class="row"></div>
+    			<div class="margin-top-50"></div>
+    	</div>
+
+
+    	<!-- Widgets -->
+    	<div class="col-lg-3 col-md-4">
+    		<div class="sidebar right">
+    			<div class="widget margin-top-40">
+    				<h3>Related</h3>
+    				<ul id="recent-posts" class="widget-tabs"></ul>
+    			</div>
+    		</div>
+    	</div>
+    	</div>
+    	<!-- Sidebar / End -->
+
     </div>
+
+    {{>footer-dark}}
+    <a style="display:none" id="btn-show-modal" href="#sign-in-dialog" class="popup-with-zoom-anim">test</a>
   </div>
+  <!-- Wrapper / End -->
 
-	<div class="row sticky-wrapper">
-		<div class="col-lg-8 col-md-8 padding-right-30 margin-top-0">
-			<div id="titlebar" class="listing-titlebar padding-top-0">
-				<div class="listing-titlebar-title">
-          <img class="margin-top-20" src="{{{template.image}}}=s1024" />
-				</div>
-			</div>
-
-			<!-- Listing Nav -->
-			<div id="listing-nav" class="listing-nav-container">
-				<ul class="listing-nav">
-					<li><a href="#listing-overview" class="active">Overview</a></li>
-					<li><a href="#listing-gallery">Gallery</a></li>
-					<li><a href="#listing-pricing-list">Pricing</a></li>
-					<li><a href="#listing-location">Location</a></li>
-					<li><a href="#listing-reviews">Reviews</a></li>
-					<li><a href="#add-review">Add Review</a></li>
-				</ul>
-			</div>
-
-			<!-- Overview -->
-			<div id="listing-overview" class="listing-section">
-				<p>{{{template.description}}}</p>
-
-				<h3 class="listing-desc-headline">Tags</h3>
-				<ul class="listing-features checkboxes">
-          {{#template.tags}}
-					<li>{{.}}</li>
-          {{/template.tags}}
-				</ul>
-			</div>
-
-			<div id="listing-gallery" class="listing-section">
-				<h3 class="listing-desc-headline margin-top-70">Screenshots</h3>
-				<div class="listing-slider-small mfp-gallery-container margin-bottom-0">
-          {{#template.images}}
-          <a target="_blank" href="{{{.}}}=s1024" data-background-image="{{{.}}}=s1024-c" class="item mfp-gallery" title="Vertex 360"></a>
-          {{/template.images}}
-				</div>
-			</div>
-
-			<!-- Add Review Box -->
-			<div id="add-review" class="add-review-box">
-
-				<!-- Add Review -->
-				<h3 class="listing-desc-headline margin-bottom-20">Add Review</h3>
-
-				<span class="leave-rating-title">Your rating for this listing</span>
-
-				<!-- Rating / Upload Button -->
-				<div class="row">
-					<div class="col-md-6">
-						<!-- Leave Rating -->
-						<div class="clearfix"></div>
-						<div class="leave-rating margin-bottom-30">
-							<input type="radio" name="rating" id="rating-1" value="1"/>
-							<label for="rating-1" class="fa fa-star"></label>
-							<input type="radio" name="rating" id="rating-2" value="2"/>
-							<label for="rating-2" class="fa fa-star"></label>
-							<input type="radio" name="rating" id="rating-3" value="3"/>
-							<label for="rating-3" class="fa fa-star"></label>
-							<input type="radio" name="rating" id="rating-4" value="4"/>
-							<label for="rating-4" class="fa fa-star"></label>
-							<input type="radio" name="rating" id="rating-5" value="5"/>
-							<label for="rating-5" class="fa fa-star"></label>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-
-					<div class="col-md-6">
-						<!-- Uplaod Photos -->
-						<div class="add-review-photos margin-bottom-30">
-							<div class="photoUpload">
-							    <span><i class="sl sl-icon-arrow-up-circle"></i> Upload Photos</span>
-							    <input type="file" class="upload" />
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Review Comment -->
-				<form id="add-comment" class="add-comment">
-					<fieldset>
-
-						<div class="row">
-							<div class="col-md-6">
-								<label>Name:</label>
-								<input type="text" value=""/>
-							</div>
-
-							<div class="col-md-6">
-								<label>Email:</label>
-								<input type="text" value=""/>
-							</div>
-						</div>
-
-						<div>
-							<label>Review:</label>
-							<textarea cols="40" rows="3"></textarea>
-						</div>
-
-					</fieldset>
-
-					<button class="button">Submit Review</button>
-					<div class="clearfix"></div>
-				</form>
-
-			</div>
-			<!-- Add Review Box / End -->
-
-
-		</div>
-
-		<div class="col-lg-4 col-md-4 margin-top-25 sticky">
-
-			<div class="boxed-widget margin-top-0">
-				<div class="hosted-by-title">
-					<h4><span>Created by</span> <a class="capitalize" href="/profile/{{template.profile.slug}}">{{template.profile.firstName}} {{template.profile.lastName}}</a></h4>
-					<a href="/profile/{{template.profile.slug}}" class="hosted-by-avatar"><img src="{{{template.profile.image}}}=s120-c" alt="Vertex 360 | {{template.profile.firstName}} {{template.profile.lastName}}"></a>
-				</div>
-
-				<ul class="listing-details-sidebar social-profiles">
-					<li><a href="#" class="facebook-profile"><i class="fa fa-facebook-square"></i> Facebook</a></li>
-					<li><a href="#" class="linkedin-profile"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
-				</ul>
-				<a href="/profile/{{template.profile.slug}}" class="send-message-to-owner button">View Profile</a>
-			</div>
-
-
-			<!-- Share / Like -->
-			<div class="listing-share margin-top-40 margin-bottom-40 no-border">
-				<button class="like-button"><span class="like-icon"></span> Save this template</button>
-
-				<ul class="share-buttons margin-top-40 margin-bottom-0">
-					<li><a class="fb-share" href="#"><i class="fa fa-facebook"></i> Share</a></li>
-					<li><a class="twitter-share" href="#"><i class="fa fa-twitter"></i> Tweet</a></li>
-				</ul>
-				<div class="clearfix"></div>
-			</div>
-
-      <div class="widget margin-top-40">
-				<h3>Related</h3>
-				<ul id="related-sites" class="widget-tabs"></ul>
-			</div>
-
-		</div>
-		<!-- Sidebar / End -->
-
-	</div>
-</div>
-
-{{>footer-dark}}
-<a style="display:none" id="btn-show-modal" href="#sign-in-dialog" class="popup-with-zoom-anim">test</a>
-</div>
-<!-- Wrapper / End -->
 
 <script type="text/template" id="tpl-site-preview">
   <li>
