--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6275,7 +6275,8 @@ a.rate-review:hover {
 /* Blog Styles
 ------------------------------------- */
 .blog-post {
-	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+	/* box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1); */
+	border: 1px solid #ededed;
 	background-color: #fff;
 	display: inline-block;
 	width: 100%;
