--- a/views/template.mustache
+++ b/views/template.mustache
@@ -78,6 +78,10 @@
               <hr class="margin-top-20 margin-bottom-30" />
               <img style="max-width:60%" class="post-img" src="{{{template.image}}}=s1024" alt="Vertex 360 | {{template.name}}">
     					<p>{{{template.description}}}</p>
+              <h4>Screenshots</h4>
+              {{#template.images}}
+              <div class="screenshot"><img src="{{{ . }}}" /></div>
+              {{/template.images}}
     				</div>
 
             <!-- About Author -->
