--- a/views/template.mustache
+++ b/views/template.mustache
@@ -92,7 +92,7 @@
               <p style="margin-bottom:16px;color:#888">
                 Launch this template on your account.
               </p>
-              <img style="max-width:320px;float:inherit" src="{{{template.image}}}=s512" />
+              <img style="max-width:320px;float:inherit;width:inherit;border-radius:inherit;margin:inherit" src="{{{template.image}}}=s512" />
 
               <div class="input-row margin-top-40">
                 <div class="input-label">Your Site Name</div>
