--- a/views/template.mustache
+++ b/views/template.mustache
@@ -116,7 +116,7 @@
     	<div class="col-lg-3 col-md-4">
     		<div class="sidebar right">
     			<div class="widget margin-top-40">
-    				<h3>Related</h3>
+    				<h3>Featured Templates</h3>
     				<ul id="related-sites" class="widget-tabs"></ul>
     			</div>
     		</div>
