--- a/views/post.mustache
+++ b/views/post.mustache
@@ -29,6 +29,8 @@
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 180px;
+      line-height:18px;
+      margin-bottom:0px;
     }
 
     @media (min-width: 768px) {
@@ -129,7 +131,7 @@
       </div>
 
       <div class="widget-text" style="padding-top:6px">
-        <h5 class="preview-title" style="line-height:12px;margin-bottom:0px">
+        <h5 class="preview-title">
           <a href="/post/<% slug %>"><% title %></a>
         </h5>
         <small><% dateString %></small>
