--- a/views/template.mustache
+++ b/views/template.mustache
@@ -39,6 +39,8 @@
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 180px;
+      line-height:18px;
+      margin-bottom:0px;
     }
 
     @media (min-width: 768px) {
@@ -142,7 +144,7 @@
   		</div>
 
       <div class="widget-text" style="padding-top:6px">
-        <h5 class="preview-title" style="line-height:12px;margin-bottom:0px">
+        <h5 class="preview-title">
           <a href="/post/<% slug %>"><% name %></a>
         </h5>
   			<small><% template.category %></small>
