--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -119,3 +119,12 @@
   background: rgb(249, 249, 249);
   padding: 3px 3px 3px 8px;
 }
+
+.preview-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 180px;
+  line-height:18px;
+  margin-bottom:0px !important;
+}
